added congig file changes

--- a/1_fetch.ipynb
+++ b/1_fetch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1858176a",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,14 @@
     "from email.header import decode_header\n",
     "import pandas as pd\n",
     "from datetime import datetime, timedelta\n",
-    "import pytz"
+    "import pytz\n",
+    "import configparser\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "749f3f24",
    "metadata": {},
    "outputs": [
@@ -150,18 +152,20 @@
    ],
    "source": [
     "\n",
-    "IMAP_SERVER = 'imap.gmail.com'\n",
-    "SMTP_SERVER = 'smtp.gmail.com'\n",
-    "EMAIL_ACCOUNT = 'yashjoshi30052002@gmail.com'\n",
-    "APP_PASSWORD = 'iuox okin ayza xtmb'\n",
-    "FORWARD_TO = 'gourav.dangi@blinkx.in'\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read(\"app.config\")\n",
     "\n",
+    "\n",
+    "IMAP_SERVER = config[\"fetch\"][\"IMAP_SERVER\"]\n",
+    "SMTP_SERVER = config[\"fetch\"][\"SMTP_SERVER\"]\n",
+    "EMAIL_ACCOUNT = config[\"fetch\"][\"EMAIL_ACCOUNT\"]\n",
+    "APP_PASSWORD = config[\"fetch\"][\"APP_PASSWORD\"]\n",
     "\n",
     "mail = imaplib.IMAP4_SSL(IMAP_SERVER)\n",
     "mail.login(EMAIL_ACCOUNT, APP_PASSWORD)\n",
     "mail.select('inbox')\n",
     "\n",
-    "since_date = (datetime.utcnow() - timedelta(hours=5)).strftime('%d-%b-%Y')\n",
+    "since_date = (datetime.utcnow() - timedelta(hours=24)).strftime('%d-%b-%Y')\n",
     "result, data = mail.uid('search', None, f'(SINCE {since_date})')\n",
     "\n",
     "uids = data[0].split()\n",
