--- a/2_analyse.ipynb
+++ b/2_analyse.ipynb
@@ -20,6 +20,38 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import configparser\n",
+        "import json"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'list'>\n"
+          ]
+        }
+      ],
+      "source": [
+        "config = configparser.ConfigParser()\n",
+        "config.read(\"app.config\")\n",
+        "\n",
+        "type_labels = json.loads(config[\"analyse\"][\"type_labels\"])\n",
+        "urgency_labels = json.loads(config[\"analyse\"][\"urgency_labels\"])\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "nP5XZftIYvoO"
       },
@@ -31,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -56,10 +88,8 @@
       ],
       "source": [
         "type_classifier = pipeline(    \"zero-shot-classification\",    model=\"MoritzLaurer/DeBERTa-v3-base-mnli-fever-anli\",    multi_label=False)\n",
-        "type_labels =  [ \"technology\", \"News\" , \"Job search\", \"Editorial\", \"Blog\", \"Webinar\", \"Bank Related\"]\n",
         "\n",
         "urgency_classifier = pipeline(\"zero-shot-classification\", model=\"facebook/bart-large-mnli\")\n",
-        "urgency_labels = [\"blocker\", \"major\", \"normal\", \"minor\"]\n",
         "\n",
         "sentiment_classifier = pipeline(\"sentiment-analysis\", model=\"cardiffnlp/twitter-roberta-base-sentiment-latest\")"
       ]
@@ -867,7 +897,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
