--- a/3_forward.ipynb
+++ b/3_forward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "b919e1cd",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,15 @@
     "import imaplib\n",
     "import email\n",
     "from email.message import EmailMessage\n",
-    "import smtplib\n"
+    "import smtplib\n",
+    "import configparser\n",
+    "import json\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "id": "0a9ac569",
    "metadata": {},
    "outputs": [
@@ -123,7 +126,7 @@
        "1  yashjoshi30052@gmail.com  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,13 +135,9 @@
     "df = pd.read_pickle('type.pkl')\n",
     "\n",
     "\n",
-    "emails =  { \"technology\":\"yashjoshi30052@gmail.com\", \n",
-    "                \"News\" : \"yashjoshi30052@gmail.com\", \n",
-    "                \"Job search\":'gourav.dangi@blinkx.in', \n",
-    "                \"Editorial\":\"gourav.dangi@blinkx.in\", \n",
-    "                \"Blog\" : \"yashjoshi30052@gmail.com\",\n",
-    "                \"Webinar\" : \"yashjoshi30052@gmail.com\",\n",
-    "                \"Bank Related\": 'gourav.dangi@blinkx.in'}\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read(\"app.config\")\n",
+    "emails = json.loads(config[\"forward\"][\"emails\"])\n",
     "\n",
     "df['email'] = df['type'].map(emails)\n",
     "\n",
