changes in upload

--- a/4_upload.ipynb
+++ b/4_upload.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "96a87328",
    "metadata": {},
    "outputs": [
@@ -86,25 +86,23 @@
     "table_id1 = f'fetchemail-3005.Logs.email_fetch_{timestamp_str}'\n",
     "table_id2 = f'fetchemail-3005.Logs.email_type_{timestamp_str}'\n",
     "\n",
-    "# Path to your OAuth 2.0 client secrets JSON file\n",
-    "oauth_credentials_path = 'fetchemail-3005-822740b3bf5b.json'  # Replace with the actual path\n",
+    "oauth_credentials_path = 'fetchemail-3005-822740b3bf5b.json' \n",
     "\n",
     "\n",
     "\n",
     "try:\n",
-    "    # Load OAuth 2.0 client secrets from the JSON file\n",
+    "  \n",
     "    credentials = service_account.Credentials.from_service_account_file(oauth_credentials_path)\n",
     "\n",
-    "    # Ensure the credentials have the necessary scopes for BigQuery\n",
     "    if not credentials.scopes:\n",
     "        credentials = credentials.with_scopes(\n",
     "            [\"https://www.googleapis.com/auth/bigquery\"]\n",
     "        )\n",
     "\n",
-    "    # Create a BigQuery client using the loaded credentials\n",
+    "    \n",
     "    client = bigquery.Client(credentials=credentials, project=project_id)\n",
     "\n",
-    "    # Upload the DataFrame to BigQuery using the loaded OAuth credentials\n",
+    "\n",
     "    to_gbq(df, table_id1, project_id=project_id, if_exists='append', credentials=credentials)\n",
     "    to_gbq(df2, table_id2, project_id=project_id, if_exists='append', credentials=credentials)\n",
     "    print(f\"DataFrame written to BigQuery table: {table_id1} , {table_id2}using OAuth 2.0 credentials from: {oauth_credentials_path}\")\n",
