changes in config

--- a/2_analyse.ipynb
+++ b/2_analyse.ipynb
@@ -31,22 +31,13 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "<class 'list'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "config = configparser.ConfigParser()\n",
         "config.read(\"app.config\")\n",
         "\n",
         "type_labels = json.loads(config[\"analyse\"][\"type_labels\"])\n",
-        "urgency_labels = json.loads(config[\"analyse\"][\"urgency_labels\"])\n",
-        "\n"
+        "urgency_labels = json.loads(config[\"analyse\"][\"urgency_labels\"])"
       ]
     },
     {
