--- a/3_forward.ipynb
+++ b/3_forward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b919e1cd",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,12 @@
     "from email.message import EmailMessage\n",
     "import smtplib\n",
     "import configparser\n",
-    "import json\n",
-    "\n"
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0a9ac569",
    "metadata": {},
    "outputs": [
@@ -140,13 +139,12 @@
     "emails = json.loads(config[\"forward\"][\"emails\"])\n",
     "\n",
     "df['email'] = df['type'].map(emails)\n",
-    "\n",
     "df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "548f9285",
    "metadata": {},
    "outputs": [
@@ -160,12 +158,10 @@
     }
    ],
    "source": [
-    "\n",
-    "IMAP_SERVER = 'imap.gmail.com'\n",
-    "SMTP_SERVER = 'smtp.gmail.com'\n",
-    "EMAIL_ACCOUNT = 'yashjoshi30052002@gmail.com'  \n",
-    "APP_PASSWORD = 'iuox okin ayza xtmb'  \n",
-    "\n",
+    "IMAP_SERVER = config[\"fetch\"][\"IMAP_SERVER\"]\n",
+    "SMTP_SERVER = config[\"fetch\"][\"SMTP_SERVER\"]\n",
+    "EMAIL_ACCOUNT = config[\"fetch\"][\"EMAIL_ACCOUNT\"]\n",
+    "APP_PASSWORD = config[\"fetch\"][\"APP_PASSWORD\"]\n",
     "\n",
     "def forward_email_by_uid(recipient_email, uid, urgency, sentiment):\n",
     "    try:\n",
