--- a/4_upload.ipynb
+++ b/4_upload.ipynb
@@ -2,44 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3733ed47",
+   "execution_count": null,
+   "id": "1702f620",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "from google.cloud import bigquery\n",
     "from google.oauth2 import service_account\n",
     "from pandas_gbq import to_gbq\n",
-    "import pandas as pd"
+    "from datetime import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6ef5e403",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def upload(df) :\n",
-    "    project_id = 'fetchemail-3005'\n",
-    "    table_id = 'fetchemail-3005.Logs.fetch'\n",
-    "    credentials = service_account.Credentials.from_service_account_file(\n",
-    "        'client_secret.json',\n",
-    "    )\n",
-    "\n",
-    "    df.to_gbq(table_id, project_id, if_exists=\"append\" , credentials= credentials)\n",
-    "    return 'sucess'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "d49e97e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_pickle('emails.pkl')\n",
-    "df2 = pd.read_pickle('type.pkl')\n"
+    "df2 = pd.read_pickle('type.pkl')"
    ]
   },
   {
@@ -72,13 +55,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from google.cloud import bigquery\n",
-    "from google.oauth2 import service_account\n",
-    "from pandas_gbq import to_gbq\n",
-    "from datetime import datetime\n",
-    "\n",
-    "\n",
     "project_id = 'fetchemail-3005'\n",
     "\n",
     "now = datetime.now()\n",
@@ -86,13 +62,13 @@
     "table_id1 = f'fetchemail-3005.Logs.email_fetch_{timestamp_str}'\n",
     "table_id2 = f'fetchemail-3005.Logs.email_type_{timestamp_str}'\n",
     "\n",
-    "oauth_credentials_path = 'fetchemail-3005-822740b3bf5b.json' \n",
+    "service_account_credentials_path = 'fetchemail-3005-822740b3bf5b.json' \n",
     "\n",
     "\n",
     "\n",
     "try:\n",
     "  \n",
-    "    credentials = service_account.Credentials.from_service_account_file(oauth_credentials_path)\n",
+    "    credentials = service_account.Credentials.from_service_account_file(service_account_credentials_path)\n",
     "\n",
     "    if not credentials.scopes:\n",
     "        credentials = credentials.with_scopes(\n",
@@ -105,7 +81,7 @@
     "\n",
     "    to_gbq(df, table_id1, project_id=project_id, if_exists='append', credentials=credentials)\n",
     "    to_gbq(df2, table_id2, project_id=project_id, if_exists='append', credentials=credentials)\n",
-    "    print(f\"DataFrame written to BigQuery table: {table_id1} , {table_id2}using OAuth 2.0 credentials from: {oauth_credentials_path}\")\n",
+    "    print(f\"DataFrame written to BigQuery table: {table_id1} , {table_id2}using OAuth 2.0 credentials from: {service_account_credentials_path}\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"An error occurred during BigQuery upload with OAuth 2.0 credentials: {e}\")"
