--- a/1_fetch.ipynb
+++ b/1_fetch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "id": "1858176a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,56 @@
     "from datetime import datetime, timedelta\n",
     "import pytz\n",
     "import configparser\n",
-    "import json"
+    "import json\n",
+    "import quopri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "38629278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type of data is <class 'list'>\n",
+      "[b'16494 16495 16496 16497 16498 16499 16500 16501 16502 16503 16504']\n",
+      "type of result is <class 'str'>\n",
+      "OK\n",
+      "type of uids is <class 'list'>\n",
+      "[b'16494', b'16495', b'16496', b'16497', b'16498', b'16499', b'16500', b'16501', b'16502', b'16503', b'16504']\n"
+     ]
+    }
+   ],
+   "source": [
+    "config = configparser.ConfigParser()\n",
+    "config.read(\"app.config\")\n",
+    "\n",
+    "\n",
+    "IMAP_SERVER = config[\"fetch\"][\"IMAP_SERVER\"]\n",
+    "SMTP_SERVER = config[\"fetch\"][\"SMTP_SERVER\"]\n",
+    "EMAIL_ACCOUNT = config[\"fetch\"][\"EMAIL_ACCOUNT\"]\n",
+    "APP_PASSWORD = config[\"fetch\"][\"APP_PASSWORD\"]\n",
+    "\n",
+    "mail = imaplib.IMAP4_SSL(IMAP_SERVER)\n",
+    "mail.login(EMAIL_ACCOUNT, APP_PASSWORD)\n",
+    "mail.select('inbox')\n",
+    "\n",
+    "since_date = (datetime.utcnow() - timedelta(hours=24)).strftime('%d-%b-%Y')\n",
+    "result, data = mail.uid('search', None, f'(SINCE {since_date})')\n",
+    "\n",
+    "print(f'type of data is {type(data)}')\n",
+    "print(data)\n",
+    "\n",
+    "print(f'type of result is {type(result)}')\n",
+    "print(result)\n",
+    "\n",
+    "uids = data[0].split()\n",
+    "\n",
+    "print(f'type of uids is {type(uids)}')\n",
+    "print(uids)\n"
    ]
   },
   {
@@ -151,38 +200,34 @@
     }
    ],
    "source": [
-    "\n",
-    "config = configparser.ConfigParser()\n",
-    "config.read(\"app.config\")\n",
-    "\n",
-    "\n",
-    "IMAP_SERVER = config[\"fetch\"][\"IMAP_SERVER\"]\n",
-    "SMTP_SERVER = config[\"fetch\"][\"SMTP_SERVER\"]\n",
-    "EMAIL_ACCOUNT = config[\"fetch\"][\"EMAIL_ACCOUNT\"]\n",
-    "APP_PASSWORD = config[\"fetch\"][\"APP_PASSWORD\"]\n",
-    "\n",
-    "mail = imaplib.IMAP4_SSL(IMAP_SERVER)\n",
-    "mail.login(EMAIL_ACCOUNT, APP_PASSWORD)\n",
-    "mail.select('inbox')\n",
-    "\n",
-    "since_date = (datetime.utcnow() - timedelta(hours=24)).strftime('%d-%b-%Y')\n",
-    "result, data = mail.uid('search', None, f'(SINCE {since_date})')\n",
-    "\n",
-    "uids = data[0].split()\n",
-    "\n",
-    "\n",
     "def decode_mime_words(s):\n",
+    "    \"\"\"\n",
+    "    A function that explicitly handles Quoted-Printable encoding for UTF-8, \n",
+    "    especially for characters like emojis.\n",
+    "    \"\"\"\n",
     "    if not s:\n",
     "        return \"\"\n",
-    "    decoded = decode_header(s)\n",
-    "    return ''.join([\n",
-    "        part[0].decode(part[1] or 'utf-8') if isinstance(part[0], bytes) else str(part[0])\n",
-    "        for part in decoded\n",
-    "    ])\n",
+    "    decoded = email.header.decode_header(s)\n",
+    "    decoded_parts = []\n",
+    "    for part, charset in decoded:\n",
+    "        if isinstance(part, bytes):\n",
+    "            if charset and charset.lower() == 'utf-8' and b'=' in part:\n",
+    "                try:\n",
+    "                    decoded_part = quopri.decode(part).decode('utf-8')\n",
+    "                except UnicodeDecodeError:\n",
+    "                    decoded_part = part.decode('utf-8', errors='ignore')\n",
+    "            else:\n",
+    "                decoded_part = part.decode(charset or 'utf-8', errors='ignore')\n",
+    "            decoded_parts.append(decoded_part)\n",
+    "        else:\n",
+    "            decoded_parts.append(str(part)) \n",
     "\n",
-    "# Filter emails from the last 5 hours\n",
+    "    return ''.join(decoded_parts)\n",
+    "\n",
+    "\n",
+    "\n",
     "emails = []\n",
-    "cutoff_time = datetime.utcnow().replace(tzinfo=pytz.UTC) - timedelta(hours=5)\n",
+    "cutoff_time = datetime.utcnow().replace(tzinfo=pytz.UTC) - timedelta(hours=24)\n",
     "\n",
     "for uid in uids:\n",
     "    result, msg_data = mail.uid('fetch', uid, '(RFC822)')\n",
