--- a/3_forward.ipynb
+++ b/3_forward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b919e1cd",
    "metadata": {},
    "outputs": [],
@@ -14,12 +14,13 @@
     "from email.message import EmailMessage\n",
     "import smtplib\n",
     "import configparser\n",
-    "import json"
+    "import json\n",
+    "import quopri"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0a9ac569",
    "metadata": {},
    "outputs": [
@@ -125,7 +126,7 @@
        "1  yashjoshi30052@gmail.com  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "548f9285",
    "metadata": {},
    "outputs": [
@@ -163,7 +164,34 @@
     "EMAIL_ACCOUNT = config[\"fetch\"][\"EMAIL_ACCOUNT\"]\n",
     "APP_PASSWORD = config[\"fetch\"][\"APP_PASSWORD\"]\n",
     "\n",
-    "def forward_email_by_uid(recipient_email, uid, urgency, sentiment):\n",
+    "\n",
+    "def decode_mime_words(s):\n",
+    "    \"\"\"\n",
+    "    A function that explicitly handles Quoted-Printable encoding for UTF-8, \n",
+    "    especially for characters like emojis.\n",
+    "    \"\"\"\n",
+    "    if not s:\n",
+    "        return \"\"\n",
+    "    decoded = email.header.decode_header(s)\n",
+    "    decoded_parts = []\n",
+    "    for part, charset in decoded:\n",
+    "        if isinstance(part, bytes):\n",
+    "            if charset and charset.lower() == 'utf-8' and b'=' in part:\n",
+    "                try:\n",
+    "                    decoded_part = quopri.decode(part).decode('utf-8')\n",
+    "                except UnicodeDecodeError:\n",
+    "                    decoded_part = part.decode('utf-8', errors='ignore')\n",
+    "            else:\n",
+    "                decoded_part = part.decode(charset or 'utf-8', errors='ignore')\n",
+    "            decoded_parts.append(decoded_part)\n",
+    "        else:\n",
+    "            decoded_parts.append(str(part)) \n",
+    "\n",
+    "    return ''.join(decoded_parts)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def forward_email_by_uid(recipient_email, uid, urgency, urgency_confidence, sentiment):\n",
     "    try:\n",
     "        \n",
     "        mail = imaplib.IMAP4_SSL(IMAP_SERVER)\n",
@@ -183,6 +211,9 @@
     "        subject = original_msg['Subject']\n",
     "        sender = original_msg['From']\n",
     "\n",
+    "        subject_decoded = decode_mime_words(subject)\n",
+    "        sender_decoded = decode_mime_words(sender)\n",
+    "\n",
     "        body = \"\"\n",
     "        if original_msg.is_multipart():\n",
     "            for part in original_msg.walk():\n",
@@ -196,15 +227,16 @@
     "\n",
     "      \n",
     "        forward_msg = EmailMessage()\n",
-    "        forward_msg['Subject'] = 'Fwd: ' + subject\n",
+    "        forward_msg['Subject'] = 'Fwd: ' + subject_decoded\n",
     "        forward_msg['From'] = EMAIL_ACCOUNT\n",
     "        forward_msg['To'] = recipient_email\n",
     "\n",
     "        forward_body = f\"\"\"---------- Forwarded message ----------\n",
-    "From: {sender}\n",
-    "Subject: {subject}\n",
-    "Urgency : {urgency}\n",
-    "Mail Nature : Sentiment - {sentiment}\n",
+    "From: {sender_decoded}\n",
+    "Subject: {subject_decoded}\n",
+    "\n",
+    "Urgency : {urgency} (Urgency Surity - {urgency_confidence} %)\n",
+    "Mail Nature : Mail has {sentiment} sentiment\n",
     "\n",
     "{body}\n",
     "\"\"\"\n",
@@ -224,9 +256,18 @@
     "        recipient = row['email']\n",
     "        email_uid = row['uid']\n",
     "        urgency = row['urgency']\n",
+    "        urgency_confidence = int(row['urgency_confidence']*100)\n",
     "        sentiment= row['sentiment']\n",
-    "        forward_email_by_uid(recipient, email_uid, urgency, sentiment)"
+    "        forward_email_by_uid(recipient, email_uid, urgency,urgency_confidence,  sentiment)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e5e009e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
