--- a/4_upload.ipynb
+++ b/4_upload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1702f620",
    "metadata": {},
    "outputs": [],
@@ -11,7 +11,9 @@
     "from google.cloud import bigquery\n",
     "from google.oauth2 import service_account\n",
     "from pandas_gbq import to_gbq\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import configparser\n",
+    "import json"
    ]
   },
   {
@@ -62,7 +64,9 @@
     "table_id1 = f'fetchemail-3005.Logs.email_fetch_{timestamp_str}'\n",
     "table_id2 = f'fetchemail-3005.Logs.email_type_{timestamp_str}'\n",
     "\n",
-    "service_account_credentials_path = 'fetchemail-3005-822740b3bf5b.json' \n",
+    "config = configparser.ConfigParser()\n",
+    "config.read(\"app.config\")\n",
+    "service_account_credentials_path = config['upload']['service_account_credentials_path']\n",
     "\n",
     "\n",
     "\n",
@@ -79,8 +83,8 @@
     "    client = bigquery.Client(credentials=credentials, project=project_id)\n",
     "\n",
     "\n",
-    "    to_gbq(df, table_id1, project_id=project_id, if_exists='append', credentials=credentials)\n",
-    "    to_gbq(df2, table_id2, project_id=project_id, if_exists='append', credentials=credentials)\n",
+    "    to_gbq(df, table_id1, project_id=project_id, if_exists='replace', credentials=credentials)\n",
+    "    to_gbq(df2, table_id2, project_id=project_id, if_exists='replace', credentials=credentials)\n",
     "    print(f\"DataFrame written to BigQuery table: {table_id1} , {table_id2}using OAuth 2.0 credentials from: {service_account_credentials_path}\")\n",
     "\n",
     "except Exception as e:\n",
